add project management, mail service, update timeExpiry field

--- a/WebProjectManager/WebProjectManager.API/appsettings.json
+++ b/WebProjectManager/WebProjectManager.API/appsettings.json
@@ -13,5 +13,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SmtpUsername": "mail-cua-minh@gmail.com",
+    "SmtpPassword": "app-password",
+    "SenderEmail": "mail-cua-minh@gmail.com",
+    "SenderName": "Project Manager Notifications"
+  }
 }
