--- a/WebProjectManager/WebProjectManager.Common/WebProjectManager.Common.csproj
+++ b/WebProjectManager/WebProjectManager.Common/WebProjectManager.Common.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.3" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
 	</ItemGroup>
 
 </Project>
